--- a/VGP201FPSStarter/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VGP201FPSStarter/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,7 +195,7 @@ bAllowEditWidgetAxisDisplay=True
 bUseLegacyCameraMovementNotifications=False
 bUseLODViewLocking=False
 MaterialParamsForDroppedTextures=()
-EditorViews=(("/Game/FPS/Maps/MainMenuMap.MainMenuMap", (LevelViewportsInfo=((CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=-17.608769,Y=24.288500,Z=159.649996),CamRotation=(Pitch=-0.520892,Yaw=125.941503,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/FPS/Maps/GameMap.GameMap", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=16.581303,Y=-36.401379,Z=159.649996),CamRotation=(Pitch=-20.936792,Yaw=-37.110116,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/FPS/Maps/MainMenuMap.MainMenuMap", (LevelViewportsInfo=((CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=50.910257,Y=57.572724,Z=-19.765835)),(CamPosition=(X=-17.608769,Y=24.288500,Z=159.649996),CamRotation=(Pitch=-0.520892,Yaw=125.941503,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/FPS/Maps/GameMap.GameMap", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=16.581303,Y=-36.401379,Z=159.649996),CamRotation=(Pitch=-20.536792,Yaw=0.889885,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 PropertyColorationColorForMatchingObjects=(B=0,G=0,R=255,A=255)
 
 [MRU]
@@ -413,15 +413,15 @@ PlayerController=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.
 K2Node_Variable=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 BP_Gamemode_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_EneryAICharacter_C.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 WBP_MainMenu_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
-WBP_GameMenu_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
+WBP_GameMenu_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_EneryAICharacter_C.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 TextBlock=
 BP_ResetButton_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 EdGraphNode_Comment=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
-K2Node_CallFunction=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_EneryAICharacter_C.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_CallFunction=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_EneryAICharacter_C.Physics.ConstraintsGroup,BP_EnemyAICharacter_C.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 CameraComponent=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 BP_SerializableFields_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_TheOneSingletonToRuleThemAll_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
-K2Node_FunctionEntry=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
+K2Node_FunctionEntry=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_EneryAICharacter_C.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BPI_Gun_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Shotgun_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 EdGraphNode=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
@@ -451,6 +451,13 @@ LastLevel=/Game/FPS/Maps/GameMap
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
@@ -461,21 +468,14 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -485,6 +485,13 @@ OpenAssetsAtExit=/Game/FPS/Blueprints/Enemies/AI/BT_EnemyAI.BT_EnemyAI
 OpenAssetsAtExit=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAICharacter.BP_EnemyAICharacter
 OpenAssetsAtExit=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAIController.BP_EnemyAIController
 OpenAssetsAtExit=/Game/FPS/Blueprints/Enemies/AI/BTT_AttackPlayer.BTT_AttackPlayer
+OpenAssetsAtExit=/Game/FPS/Blueprints/GUI/GameMenu/WBP_GameMenu.WBP_GameMenu
+OpenAssetsAtExit=/Game/FPS/Blueprints/Collectible/BP_Collectible.BP_Collectible
+OpenAssetsAtExit=/Game/FPS/Blueprints/Collectible/BP_HealthPickup.BP_HealthPickup
+OpenAssetsAtExit=/Game/FPS/Blueprints/Collectible/BP_Coin.BP_Coin
+OpenAssetsAtExit=/Game/FPS/Blueprints/BP_Gamemode.BP_Gamemode
+OpenAssetsAtExit=/Game/FPS/Blueprints/GUI/MainMenu/WBP_MainMenu.WBP_MainMenu
+OpenAssetsAtExit=/Game/FPS/Blueprints/Collectible/BP_BadPickup.BP_BadPickup
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FPS/Meshes/SM_Shotgun
@@ -2065,6 +2072,7 @@ PathFollowingComponent.ComponentTick=True
 PathFollowingComponent.Activation=True
 PathFollowingComponent.Cooking=True
 PathFollowingComponent.Events=True
+BP_BadPickup_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FPS/Meshes/SM_Shotgun.SM_Shotgun=0
@@ -2271,8 +2279,8 @@ bPlatformUsed[154]=0
 MaterialStatsDerivedMIOption=Ignore
 
 [RootWindow]
-ScreenPosition=X=380.000 Y=0.000
-WindowSize=X=1336.000 Y=776.000
+ScreenPosition=X=360.667 Y=0.000
+WindowSize=X=1342.000 Y=782.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2306,7 +2314,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/FPS/Blueprints/Enemies/AI
+ContentBrowserTab1.SelectedPaths=/Game/FPS/Blueprints/Collectible
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2326,17 +2334,17 @@ ContentBrowserTab1.ThumbnailSizeColumn=0
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Enemies
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Enemies/AI
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Collectible
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Player
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Components
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/GUI/GameMenu
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/GUI/MainMenu
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/GUI
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Enemies
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Enemies/AI
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Player
+ContentBrowserTab1.JumpMRU=/All/Game/FPS/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Environment
-ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/GUI/GameMenu
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Player/DELETE
 ContentBrowserTab1.JumpMRU=/All/Game/FPS/Blueprints/Gun
 ContentBrowserTab1.JumpMRU=/All/Game/UnityLikeBluprints
@@ -3849,7 +3857,7 @@ BP_Enemy_C.Actor=True
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 MassSettings="\"Object.Mass\" \"Object.Mass.ModuleSettings\" \"Object.Mass.ModuleSettings.ModuleSettings[0]\" \"Object.Mass.ModuleSettings.ModuleSettings[0].Object.ProcessingPhasesConfig\" \"Object.Mass.ModuleSettings.ModuleSettings[1]\" "
 DeveloperSettings=
-Object="\"Object.AI.AI|BehaviorTree\" "
+Object=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Platforms.PlatformSettings\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[0].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[1].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[2].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[3].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[1]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[2]\" \"Object.Platforms.PlatformSettings.Settings.Settings[4].Object.Hardware.HardwareDevices.HardwareDevices[3]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[0]\" \"Object.Platforms.PlatformSettings.Settings.Settings[5].Object.Hardware.HardwareDevices.HardwareDevices[1]\" "
 BP_Player_C=
 Character=
@@ -3921,8 +3929,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3952,32 +3960,32 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FPS/Blueprints/Enemies/AI/BTT_AttackPlayer
-MRUItem1=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAIController
-MRUItem2=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAICharacter
-MRUItem3=/Game/FPS/Blueprints/Enemies/AI/BT_EnemyAI
-MRUItem4=/Game/FPS/Blueprints/Player/BP_Player
-MRUItem5=/Game/FPS/Blueprints/Components/AC_HealthComponent
-MRUItem6=/Game/FPS/Blueprints/Enemies/AI/BTT_GetRandomPatrolLocation
-MRUItem7=/Game/FPS/Blueprints/Collectible/BP_Coin
-MRUItem8=/Game/FPS/Blueprints/Gun/BP_Rifle
-MRUItem9=/Game/FPS/Blueprints/Gun/BP_Gun
-MRUItem10=/Game/FPS/Blueprints/Enemies/BP_EnemySphere
-MRUItem11=/Game/FPS/Blueprints/Enemies/BP_EnemyCube
-MRUItem12=/Game/FPS/Blueprints/Enemies/AI/BB_EnemyAI
-MRUItem13=/Game/FPS/Blueprints/Enemies/BP_Enemy
-MRUItem14=/Game/FPS/Blueprints/BP_Gamemode
-MRUItem15=/Game/FPS/Blueprints/Player/BPI_Gun
-MRUItem16=/Game/FPS/Blueprints/GUI/GameMenu/WBP_GameMenu
-MRUItem17=/Game/FPS/Blueprints/Collectible/BP_BadPickup
-MRUItem18=/Game/FPS/Blueprints/Collectible/BP_HealthPickup
-MRUItem19=/Game/FPS/Blueprints/Collectible/BP_Collectible
-MRUItem20=/Game/FPS/Blueprints/BP_MainMenuGameMode
-MRUItem21=/Game/FPS/Blueprints/Player/DELETE/BP_CharacterThatsAGun
-MRUItem22=/Game/FPS/Blueprints/Environment/BP_ResetButton
-MRUItem23=/Game/FPS/Maps/GameMap
-MRUItem24=/Game/FPS/Maps/MainMenuMap
-MRUItem25=/Game/FPS/Blueprints/GUI/MainMenu/WBP_MainMenu
+MRUItem0=/Game/FPS/Blueprints/Collectible/BP_BadPickup
+MRUItem1=/Game/FPS/Blueprints/GUI/MainMenu/WBP_MainMenu
+MRUItem2=/Game/FPS/Blueprints/BP_Gamemode
+MRUItem3=/Game/FPS/Blueprints/Collectible/BP_Coin
+MRUItem4=/Game/FPS/Blueprints/Collectible/BP_HealthPickup
+MRUItem5=/Game/FPS/Blueprints/Collectible/BP_Collectible
+MRUItem6=/Game/FPS/Blueprints/GUI/GameMenu/WBP_GameMenu
+MRUItem7=/Game/FPS/Blueprints/Enemies/AI/BTT_AttackPlayer
+MRUItem8=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAIController
+MRUItem9=/Game/FPS/Blueprints/Enemies/AI/BP_EnemyAICharacter
+MRUItem10=/Game/FPS/Blueprints/Enemies/AI/BT_EnemyAI
+MRUItem11=/Game/FPS/Blueprints/Player/BP_Player
+MRUItem12=/Game/FPS/Blueprints/Components/AC_HealthComponent
+MRUItem13=/Game/FPS/Blueprints/Enemies/AI/BTT_GetRandomPatrolLocation
+MRUItem14=/Game/FPS/Blueprints/Gun/BP_Rifle
+MRUItem15=/Game/FPS/Blueprints/Gun/BP_Gun
+MRUItem16=/Game/FPS/Blueprints/Enemies/BP_EnemySphere
+MRUItem17=/Game/FPS/Blueprints/Enemies/BP_EnemyCube
+MRUItem18=/Game/FPS/Blueprints/Enemies/AI/BB_EnemyAI
+MRUItem19=/Game/FPS/Blueprints/Enemies/BP_Enemy
+MRUItem20=/Game/FPS/Blueprints/Player/BPI_Gun
+MRUItem21=/Game/FPS/Blueprints/BP_MainMenuGameMode
+MRUItem22=/Game/FPS/Blueprints/Player/DELETE/BP_CharacterThatsAGun
+MRUItem23=/Game/FPS/Blueprints/Environment/BP_ResetButton
+MRUItem24=/Game/FPS/Maps/GameMap
+MRUItem25=/Game/FPS/Maps/MainMenuMap
 MRUItem26=/Game/FPS/Blueprints/Gun/BP_Shotgun
 MRUItem27=/Game/UnityLikeBluprints/BP_GlobalVar
 MRUItem28=/Game/UnityLikeBluprints/BP_TheOneSingletonToRuleThemAll
